mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_match_missing_wildcard.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Non-exhaustive match on type 'int'
--> test_scripts/error_cases/semantic_match_missing_wildcard.mux:4:11
   |
 4 |     match x {
   |           ^
   |
= help: Add a wildcard '_' pattern as the last match arm to handle all remaining cases
